<resources>
    <string name="app_name">FinalProjectEvents</string>
    <string name="ButtonSignIn">SIGN IN</string>
    <string name="ButtonSignUp">SIGN UP</string>
    <string name="startBackground">mainPageBackground</string>
    <string name="backArrow">back arrow image</string>
    <string name="SignUp">SIGN UP</string>
    <string name="SignIn">SIGN IN</string>
    <string name="nameApp">EVENT KINGS</string>
    <string name="e_firstName">Enter your Name</string>
    <string name="e_lastName">Enter your Last Name</string>
    <string name="e_email">Enter a valid email</string>
    <string name="e_password">Enter password</string>
    <string name="e_confirm_password">Confirm password</string>
    <string name="e_profilepic">Enter URL link to Profile Pic</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">LOG IN</string>
    <string name="next">NEXT</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="event_name">EVENT NAME</string>
    <string name="event_description">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_location">Event Location</string>
    <string name="event_image">Event Image</string>
    <string name="event_category">Event Category</string>
    <string name="event_capacity">Event Capacity</string>
    <string name="create_event_button">Create Event</string>
    <string name="buttonLogout">LOG OUT</string>
    <string name="byeView">Come back soon for more unforgettable events ;)</string>
    <string name="textViewLogout">ARE YOU SURE YOU WANT TO LOG OUT?</string>
    <string name="loginError">Wrong email or password!</string>
    <string name="registerError">Wrong email or password</string>
    <string name="passwordError">Password does not match</string>
    <string name="event_end_date">Event Ending Date</string>
    <string name="event_start_date">Event Starting Date</string>
    <string name="create_event_success">Event Created Successfully!</string>
    <string name="create_event_fail">Error! Can\'t create the event</string>
    <string name="edit_profile_title">EDIT PROFILE</string>
    <string name="firstName">Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Enter NEW password</string>
    <string name="confirm_password">Confirm NEW password</string>
    <string name="saveChanges">SAVE CHANGES</string>
    <string name="Events">EVENTS</string>
    <string name="Owns">OWNS</string>
    <string name="Users">USERS</string>
    <string name="addConnection">ADD CONNECTION</string>
    <string name="goChat">GO TO HIS CHAT</string>
    <string name="numEventsBeenTo">77</string>
    <string name="numEventsOwns">55</string>
    <string name="UserConnections">123</string>
    <string name="myConnections">MY CONNECTIONS</string>
    <string name="followRequest">REQUESTS</string>
    <string name="chatsList">ALL CHATS</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="message_from_her">Hola, que tal estas? Me encantaria venir a tu evento!</string>
    <string name="borrarChat">ERRASE CHAT</string>
    <string name="text_fromher_time">8:00</string>
    <string name="dateConvo">6/06/2022</string>
    <string name="lastmessage">Insert Last Message</string>
    <string name="pending">Pending</string>
    <string name="error">Error!</string>
    <string name="requestSent">Friend Request Sent</string>
    <string name="removeConnection">Remove Connection</string>
    <string name="removeFriend">REMOVE CONNECTION</string>
    <string name="removedFriend">Friend removed</string>
    <string name="errorRemovingFriend">Error removing friend!</string>
    <string name="alreadyFriends">You are already Friends!</string>
    <string name="friends">FRIENDS</string>
    <string name="request_accepted">Request Accepted</string>
    <string name="request_rejected">Friend Request Rejected</string>
    <string name="search">Search</string>
    <string name="chat_userName">Pablo Perez</string>
    <string name="chat_date">10 june</string>
    <string name="user_icon">User Icon</string>
    <string name="message">Message</string>
    <string name="hourOfSend">8:00</string>
    <string name="userNameChat">John Grady Cole</string>
    <string name="myMessageText">This is a Message</string>
    <string name="sendHourMe">10:00</string>
    <string name="write_message">Write message</string>
    <string name="send_message">Send</string>
    <string name="timeChat">10:00</string>
    <string name="newImage">Image URL</string>
    <string name="empty_message">Message can\'t be empty</string>
    <string name="message_sent">Message sent</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="allUsers">ALL USERS</string>
    <string name="search_user_to_request">Input a Users Name</string>
    <string name="request">CONNECT</string>
    <string name="joinEvent">JOIN</string>
    <string name="dropEvent">DROP</string>
    <string name="attendees">EVENT ATTENDEES</string>
    <string name="update_event">UPDATE EVENT</string>
    <string name="errorSendingRequest">You are already friends or you already sent a request</string>
    <string name="EventID">ID EVENT</string>
    <string name="OwnerID">ID OWNER</string>
    <string name="numEventsID">3791</string>
    <string name="participantsInEvent">200</string>
    <string name="IDOwner">2812</string>
    <string name="StartDate">23/02/2021</string>
    <string name="EndDate">25/07/2021</string>
    <string name="locationEvent">C/ Mi casa num.7, 02932, Barcelona</string>
    <string name="ratingEvent">4.5/5</string>
    <string name="eventType">Sport</string>
    <string name="TypeEvent2">Type:</string>
    <string name="tagdescription">Description:</string>
    <string name="descriptionfinal">La gente en tu evento pasará su precioso tiempo y gastará su dinero ganado con esfuerzo. ¿Qué les ofreces exactamente a cambio? ¿Por qué deberían asistir a tu evento? Tal vez ofrezcas una clase en una lengua extranjera, pero recuerda que tus participantes no están ahí solo para aprender Tagalog. Si, eso suena extraño en la superficie. “La gente tiene motivaciones más allá del skill inmediato o experiencia que buscan.</string>
    <string name="dateComment">23/02/22</string>
    <string name="commentInsert">Insert your comment</string>
    <string name="TopicComment">Topic of the Comment</string>
    <string name="SearchEvent">Input Event</string>
    <string name="AllEvents">ALL EVENTS</string>
    <string name="owner">OWNER</string>
    <string name="numberRating">7</string>
    <string name="joined">Joined!</string>
    <string name="dropped">LEFT THE EVENT!</string>
    <string name="alreadyJoined">You are already in the event!</string>
    <string name="notInTheEvent">You can\'t drop of the event because you are not in!</string>
    <string name="keyword">Input keyword</string>
    <string name="location">Input location</string>
    <string name="inputDate">Input date (YYYY-MM-DD)</string>
    <string name="searchBest">GET BEST EVENTS</string>
    <string name="searchAll">GET ALL EVENTS</string>
    <string name="searchInput">GET EVENTS BY INPUT</string>
    <string name="score">9</string>
    <string name="join">JOIN</string>
    <string name="getAttendants">GET ATTENDANTS</string>
    <string name="myEvents">MY EVENTS</string>
    <string name="back">BACK</string>
    <string name="EditEvent">EDIT</string>
    <string name="addfriend">Connect to add the user to your friends list</string>
    <string name="alreadyJoinedEvent">You are already in the event!</string>
    <string name="noMoreParticipants">No more participants allowed</string>
    <string name="enterNamePlease">Please enter a name</string>
    <string name="alreadySentRequest">You have already sent a request</string>
    <string name="alreadySentRequestSt">You have already sent a request</string>
    <string name="errorUpdatingEvent">Error updating event</string>
    <string name="eventUpdated">Event updated successfully</string>
    <string name="z_everyone">EVERYONE</string>
    <string name="z_request">REQUESTS</string>
    <string name="z_logout">LOGOUT</string>
    <string name="z_createvent">CREATE EVENT</string>
    <string name="z_search">SEARCH EVENTS</string>
    <string name="z_chats">CHATS</string>
    <string name="z_myprofile">MY PROFILE</string>
    <string name="Z_menu">HOME</string>
    <string name="myCalendar">MY CALENDAR</string>
    <string name="addComment">Add comment</string>
    <string name="cantComment">Your comment is empty</string>
    <string name="notInTheEventComment">You are not in the event, join to be able to post a comment!</string>
    <string name="commentAdded">Comment Added!</string>
    <string name="errorComment">Error posting the comment</string>
    <string name="calendar">CALENDAR</string>


</resources>