<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/arrowBackEditProfile"
        android:layout_marginTop="20dp"
        android:layout_width="86dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/backarrow_foreground"
        android:contentDescription="@string/backArrow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/edit_profile_title"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="45sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editProfileName"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/firstName"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColor="@color/verde"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:inputType="textPersonName">
    </EditText>

    <EditText
        android:id="@+id/editProfileLastName"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/lastName"
        android:textColor="@color/verde"
        android:padding="15dp"
        android:textSize="15sp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:inputType="textPersonName">
    </EditText>

    <EditText
        android:id="@+id/editProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/email"
        android:textColor="@color/verde"
        android:padding="15dp"
        android:textSize="15sp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/editProfilePassword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/verde"
        android:textColorHint="#757575"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editProfileConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/verde"
        android:textColorHint="#757575"
        android:textSize="15sp" />

    <Button
        android:id="@+id/editProfileSaveChanges"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="70dp"
        android:backgroundTint="@color/black"
        android:text="@string/saveChanges">
    </Button>

</LinearLayout>