<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_marginTop="20dp"
        android:layout_width="86dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/backarrow_foreground"
        android:contentDescription="@string/backArrow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/SignIn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textSize="45sp"
        android:textStyle="italic">
    </TextView>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/e_email"
        android:padding="15dp"
        android:textSize="15sp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/e_password"
        android:padding="15dp"
        android:textSize="15sp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="70dp"
        android:backgroundTint="@color/black"
        android:text="@string/login">
    </Button>

</LinearLayout>