<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AllEvents"
        android:textSize="30dp"
        android:textColor="@color/pink"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/searchEventName"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/keyword"
            android:background="@drawable/perfilador"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:inputType="textPersonName">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/searchEventLocation"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/location"
            android:background="@drawable/perfilador"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:inputType="textPersonName">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/searchEventDate"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/inputDate"
            android:background="@drawable/perfilador"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:inputType="textPersonName"
            tools:ignore="TextFields">
        </EditText>
        <Button
            android:id="@+id/searchButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/search"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/pink"
            >
        </Button>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/AllEventsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>