<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allUsers"
        android:textSize="30dp"
        android:textColor="@color/teal_flojo"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/search_user_to_request"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/search_user_to_request"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:inputType="textPassword">
        </EditText>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/teal_flojo"
            >
        </Button>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myConnectionsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>