<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="630dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:scaleType="fitXY"
                android:src="@drawable/startimage"
                android:contentDescription="@string/startBackground" />

            <TextView
                android:id="@+id/myImageViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/imageView1"
                android:layout_alignTop="@id/imageView1"
                android:layout_alignEnd="@id/imageView1"
                android:layout_alignBottom="@id/imageView1"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:text="@string/nameApp"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="331dp"
                android:paddingTop="24dp"
                android:layout_marginTop="350dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ButtonSignIn"
                    android:layout_width="340dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/ButtonSignIn"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ButtonSignUp"
                    android:layout_width="340dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/ButtonSignUp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>