<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="@color/black">
    <Button
        android:id="@+id/backButtonOneChat"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:text="@string/back"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/grey_claro"
        android:gravity="center_vertical"
        tools:ignore="MissingConstraints">
    </Button>
    <TextView
        android:id="@+id/chatOtherUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_userName"
        android:textSize="30sp"
        android:background="@color/azul_claro"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints">
    </TextView>

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MessagesInChat"
        android:paddingTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/chatOtherUserName"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints">
    </androidx.recyclerview.widget.RecyclerView>

    </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/sendMessageBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/sendMessage"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="@color/grey_claro"
            android:padding="10dp"
            android:maxLength="40"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/write_message"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:imeOptions="actionSend"
            android:inputType="textCapCharacters"
            android:maxLines="2"
            android:singleLine="true"
            android:gravity="center_vertical">

        </EditText>

        <Button
            android:id="@+id/sendMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/send_message"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            android:gravity="center_vertical">
        </Button>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>